<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="login_hint">login name</string>
    <string name="password">password</string>
    <string name="switchQuestion">What does this do?</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Camera">Camera</string>
    <string name="checkbox_finish_text">Finish Activity</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="cameraPermission">Camera permission is required to take a picture.</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="noCamera">No camera app found</string>
    <string name="response">ListItemsActivity passed</string>
    <string name="responseActual">Here is my response</string>
    <string name="invalidEmail">Invalid email format</string>
    <string name="emptyPassword">Password cannot be empty</string>
    <string name="MainActivityStart">MainActivity started</string>
    <string name="LoginActivityStart">LoginActivity started</string>
    <string name="ListItemsActivityStart">ListItemsActivity started</string>
    <string name="startChat">Start Chat</string>
    <string name="outgoingMsg">Outgoing message</string>
    <string name="incomingMsg">Incoming message</string>
    <string name="msgHint">Type your message</string>
    <string name="send">Send</string>
    <string name="outgoingCallDes">Outgoing Call Icon</string>
    <string name="incomingCallDes">Incoming Call Icon</string>
...
